# nigerian-audit-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.training  MODEL_TRAINING_GUIDE.md  PDF_PROCESSING_GUIDE.md  README.md  SETUP_GUIDE.md  WEB_SCRAPING_GUIDE.md  audit.txt  cloudbuild.yaml  docker-compose.yml  fix.md  guide.md  pyproject.toml  requirements.txt  search.md
docs/: nigerian_regulations.md  training.md
scripts/: collect_data.py  deploy.sh  deploy_models.py  process_custom_pdfs.py  setup.sh  setup_database.py  setup_monitoring.py  train_models.py
src/api/: dependencies.py  main.py
src/api/middleware/: __init__.py  logging.py
src/api/routers/: __init__.py  compliance.py  financial.py  reports.py
src/config/: database.py  gcp_config.py  settings.py  sources.py
src/models/: account_mapper.py  compliance_checker.py  document_processor.py  financial_analyzer.py  nigerian_validator.py  report_generator.py  risk_assessor.py  substantive_tester.py
src/schemas/: compliance.py  document.py  financial.py  mapping.py  reporting.py  reports.py  responses.py  risk.py  testing.py  validation.py
src/scrapers/: base_scraper.py  cac_scraper.py  firs_scraper.py  frc_scraper.py  ngx_scraper.py  regulatory_updater.py
src/training/: __init__.py  data_collector.py  evaluation.py  model_trainer.py  preprocessor.py  vertex_ai_trainer.py
src/utils/: currency.py  data_validator.py  document_parser.py  feature_engineering  nigerian_standards.py  validators.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_integration.py
